# logiq

./: .env.example  .gitignore  Dockerfile  README.md  customer_app.py  engineer_app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/css/: customers.css  engineers.css
backend/utils/: geo_operations.py
customer_agent/: agent.py  config.py  prompts.py  runner.py
customer_agent/sub_agents/appliance_support_and_troubleshooting_agent/: agent.py
customer_agent/sub_agents/customer_appliances_agent/: agent.py
customer_agent/sub_agents/product_enquiry_agent/: agent.py  prompts.py
customer_agent/sub_agents/register_appliance_agent/: agent.py
customer_agent/sub_agents/register_onsite_service_request/: agent.py  prompts.py
customer_agent/sub_agents/service_requests_agent/: agent.py
customer_agent/tools/: customer_agent_tools.py
database/cloud_sql/: queries.py
database/firebase/: firestore.py
engineer_agent/: agent.py  config.py  prompts.py  runner.py  tools.py
engineer_agent/sub_agents/account_management_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
engineer_agent/sub_agents/navigation_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
engineer_agent/sub_agents/ticket_management_agent/: __init__.py  agent.py  config.py  prompts.py
engineer_agent/sub_agents/ticket_management_agent/tools/: active_tickets.py  resolved_tickets.py
engineer_agent/sub_agents/troubleshoot_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
