[project]
name = "logiq-smart-appliance-management"
version = "0.1.0"
description = "A smart home appliance management tool that offers an AI-powered ecosystem for customers and service engineers to manage household appliances and service bookings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "bleach>=6.3.0",
    "cloud-sql-python-connector>=1.18.5",
    "fastapi>=0.118.3",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "folium>=0.20.0",
    "functions-framework>=3.10.0",
    "geopy>=2.4.1",
    "gmaps>=0.9.0",
    "google-adk>=1.19.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-cloud-aiplatform>=1.128.0",
    "google-cloud-appengine-logging>=1.7.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-core>=2.5.0",
    "google-cloud-discoveryengine>=0.13.12",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-monitoring>=2.28.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage>=3.6.0",
    "google-cloud-trace>=1.17.0",
    "google-genai>=1.52.0",
    "googlemaps>=4.10.0",
    "litellm>=1.80.0",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.3.5",
    "polyline>=2.0.3",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "pypdf>=6.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.6",
    "sib-api-v3-sdk>=7.6.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "streamlit-antd-components>=0.3.2",
    "streamlit-extras>=0.7.8",
    "streamlit-folium>=0.25.3",
    "twilio>=9.8.7",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
